<resources>
    <string name="app_name">DayliStudent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Definições</string>
    <string name="budgetActivityTitle">Gerir Budget</string>
    <string name="budgetActivityTotal">"TOTAL = "</string>
    <string name="budgetActivityMoney">€</string>
    <string name="dayliStudentActivityTitle">Notas Textuais</string>
    <string name="DayliStudentActivityDeleteNote">Apagar</string>
    <string name="mainActivityTitle">DayliStudent</string>
    <string name="mainActivityWelcomeDialog">Bem vindo ao DayliStudent! @ISEC @JorgeSilva</string>
    <string name="mainActivityRegister">Efectua o Registo :</string>
    <string name="mainActivityRegisterEmptyFields">Campos Vazios</string>
    <string name="mainActivityRegisterPasNotMatch">Passwords não são iguais</string>
    <string name="mainActivityRegisterEmail">Email não é Válido</string>
    <string name="noteBudgetTitle">Criar BudgetNote</string>
    <string name="noteBudgetTitleEdit">Editar BudgetNote</string>
    <string name="noteBudgetEmptyTitle">Não inseriste um título</string>
    <string name="noteBudgetEmptyWallet">Não tens carteiras adicionadas a esta BudgetNote</string>
    <string name="noteBudgetEmptyWallets">Não tens contas para adicionar</string>
    <string name="noteBudgetEmptyType">Não selecionaste nenhum tipo de BudgetNote</string>
    <string name="noteBudgetEmptyCategorie">Não selecionaste nenhuma Categoria</string>
    <string name="noteBudgetEmpty">Não selecionaste nenhuma carteira</string>
    <string name="noteBudgetNumberException">Não tens um valor correcto (p.ex: 8.99)</string>
    <string name="noteEditTitle">Gerir Notas</string>
    <string name="noteEditEmptyTitle">Não inseriste um título</string>
    <string name="noteEditSelectEmailApp">Selecione a aplicação por onde enviar:</string>
    <string name="noteEditNoEmailApp">Aplicação de email não instalado</string>
    <string name="walletTitle">Gerir Carteiras</string>
    <string name="walletBank">Banco</string>
    <string name="walletSaves">Poupanças</string>
    <string name="walletEmptyTitle">Não inseriste um título</string>
    <string name="preferencesTheme">Tema</string>
    <string name="preferencesFontSize">Tamanho da letra</string>
    <string name="preferencesEmail">Email</string>
    <string name="preferencesEmailSummary">Introduz o teu Email</string>
    <string name="preferencesEmailDialogTitle">Introduz o teu Email</string>
    <string name="preferencesEmailDialogMessage">Introduz o teu Email</string>
    <string name="preferencesName">Nome</string>
    <string name="preferencesNameSummary">Introduz o teu Nome Completo</string>
    <string name="preferencesNameDialogTitle">Nome</string>
    <string name="preferencesNameDialogMessage">Introduz o teu Nome Completo</string>
    <string name="preferencesCategoryInfo">Informação Pessoal</string>
    <string name="preferencesIP">IP do Grupo</string>
    <string name="preferencesIPSummary">Coloca aqui o ip do servidor do teu Grupo</string>
    <string name="preferencesIPDialogTitle">IP do Servidor</string>
    <string name="preferencesIPDialogMessage">Introduz IP</string>
    <string name="preferencesCategoryInfoFroup">Informação do Grupo</string>
    <string name="isec">\@ISEC</string>
    <string name="bgNoteActTitle">Titulo</string>
    <string name="bgNoteActTitleinsira_um_t_tulo">Insira um título</string>
    <string name="bgNoteActTitleCaracter_sticas">Características</string>
    <string name="bgNoteActTitletipo_de_valores">Tipo de Valores:</string>
    <string name="bgNoteActTitletipo_de_despesa">Gênero de Valores:</string>
    <string name="bgNoteActTitleconta">Conta:</string>
    <string name="bgNoteActTitlevalor">Valor:</string>
    <string name="bgNoteActTitleInsrtValue">Insira o valor:</string>
    <string name="bgNoteActTitleHintinsira_valor">Insira Valor...</string>
    <string name="bgNoteActTitleobserva_es">Observações</string>
    <string name="bgNoteActTitledescri_o">Descrição</string>
    <string name="contentMainResume">Resumo</string>
    <string name="contentMainToday">Hoje</string>
    <string name="contentMainProffit">Receitas:</string>
    <string name="contentMainExpenses">Despesas:</string>
    <string name="contentMaintotal">Total:</string>
    <string name="contentMainultimas_notas_tiradas">Últimas Notas Tiradas</string>
    <string name="contentMainnotas_globais">Notas de Grupo</string>
    <string name="contentMaincarteiras">Carteiras</string>
    <string name="contentMainreceitas">Receitas:</string>
    <string name="contentMaindespesas">Despesas:</string>
    <string name="noteEditActivityt_tulo">Título</string>
    <string name="noteEditActivitybody">Texto</string>
    <string name="btconfirme">Confirmar</string>
    <string name="noteBudgetListmovimentos">Movimentos</string>
    <string name="noteBudgetListcontas">Carteiras</string>
    <string name="noteBudgetListno_notes">Sem Notas!</string>
    <string name="registerActivitytitle">Registo</string>
    <string name="registerActivityuser_name">Nome do Utilizador</string>
    <string name="registerActivityemail">Email</string>
    <string name="registerActivitypassword">Password</string>
    <string name="registerActivityconfirm_password">Confirma a Password</string>
    <string name="btcreate_account">Criar Conta</string>
    <string name="walletActivityTitle">Título</string>
    <string name="walletActivitynome_da_carteira">Nome da Carteira</string>
    <string name="walletActivityvalor">Valor:</string>
    <string name="walletActivityMoney">€€€</string>
    <string name="walletActivitytipo">Tipo:</string>
    <string name="walletActivityinsira_um_tipo_ex_carteira_banco_etc">Ex: carteira, banco, etc...</string>
    <string name="walletActivitybudget_notes_from_this_wallet">BudgetNotes desta Carteira:</string>
    <string name="ctxtMenuDeleteWallet">Apagar Carteira</string>
    <string name="ctxtMenuDeleteNote">Apagar Nota</string>
    <string name="drawerHome">Home</string>
    <string name="drawerNotas_textuais">Notas Textuais</string>
    <string name="drawerNotas_budget">Notas Budget</string>
    <string name="drawerEstatisticas">Estatísticas</string>
    <string name="drawerSettings">Definições</string>
    <string name="drawerCommunicar">Comunicar</string>
    <string name="drawerEnviar_email">Enviar email</string>
    <string name="drawerLigar">Ligar</string>
    <string name="drawerCreditos">Créditos</string>
    <string name="drawerSair">Sair</string>
    <string name="Statisticsgastos"><![CDATA[chdl=Gastos&]]></string>
    <string name="despesa">Despesa</string>
    <string name="Statisticsganhos"><![CDATA[chdl=Ganhos&]]></string>
    <string name="DayliStudentActivityShareNote">Partilhar</string>
    <string name="DayliStudentActivitySharedNote">Notas Partilhadas</string>
    <string name="DayliStudentActivitySendingSharedNote">Enviar</string>
    <string name="DayliStudentActivityIPSendingSharedNote">IP do telemovel para o qual enviar</string>
    <string name="DayliStudentActivityButtonSendingSharedNote">Ligar</string>
    <string name="DayliStudentActivityReceivedSharedNote">"RECEBIDA COM SUCESSO A NOTA [ "</string>
    <string name="DayliStudentActivityReceived2SharedNote">" ] de "</string>
    <string name="DayliStudentActivitySuccessfullSendingSharedNote">"ENVIEI COM SUCESSO A NOTA [ "</string>
    <string name="notas_partilhadas">Notas Partilhadas</string>
    <string name="contentMainultimas_notas_tiradas_title">Titulo</string>
    <string name="contentMainultimas_notas_tiradas_description">Descrição</string>




    <string name="bar">Bar</string>
    <string name="cantina">Cantina</string>
    <string name="material">Material</string>
    <string name="compras">Compras</string>
    <string name="jantares">Jantares</string>
    <string name="viagens">Viagens</string>
    <string name="propinas">Propinas</string>
    <string name="apostas">Apostas</string>
    <string name="trabalho">Trabalho</string>
    <string name="outro">Outro</string>
    <string name="ultimas_notas_partilhadas">Ultimas Notas Partilhadas</string>
    <string name="ultimas">Ultimas Notas Partilhadas</string>
    <string name="amov_2016_2017">AMOV 2016/2017</string>
    <string name="trabalho_realizado_por">Trabalho realizado por:</string>
    <string name="statistics_total_gastos">Total de Gastos</string>
    <string name="statistics_total_ganhos">Total de Ganhos</string>
    <string name="statistics_media">Média de Gastos</string>
    <string name="waitingConection">Esperando conecção...</string>
    <string name="receive">RECEBER</string>
    <string name="statisticsTitle">Estatísticas</string>
    <string name="other">Outro</string>
    <string name="saude">Saúde</string>
    <string name="comida">Comida</string>
    <string name="alojamento">Alojamento</string>
    <string name="roupa">Roupa</string>
    <string name="animais">Animais de Estimação</string>
    <string name="criar_carteira">Criar Carteira</string>
    <string name="apaga_nota">Apaga Nota</string>
</resources>
