<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preferencesCategoryInfoFroup"
        android:key="group_category">

        <EditTextPreference
            android:key="serverKey"
            android:title="@string/preferencesIP"
            android:summary="@string/preferencesIPSummary"
            android:dialogTitle="@string/preferencesIPDialogTitle"
            android:dialogMessage="@string/preferencesIPDialogMessage"
            android:defaultValue="000.000.000"
            android:inputType="text"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferencesCategoryInfo"
        android:key="personal_category">


        <EditTextPreference
            android:key="nameKey"
            android:title="@string/preferencesName"
            android:summary="@string/preferencesNameSummary"
            android:dialogTitle="@string/preferencesNameDialogTitle"
            android:dialogMessage="@string/preferencesNameDialogMessage"
            android:defaultValue=""
            android:inputType="textCapWords"/>

        <EditTextPreference
            android:key="emailKey"
            android:title="@string/preferencesEmail"
            android:summary="@string/preferencesEmailSummary"
            android:dialogTitle="@string/preferencesEmailDialogTitle"
            android:dialogMessage="@string/preferencesEmailDialogMessage"
            android:defaultValue=""
            android:inputType="textEmailAddress"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="Customisations"
        android:key="custom_category">


        <ListPreference
            android:defaultValue="light-sans"
            android:entries="@array/theme_list_values"
            android:entryValues="@array/theme_list_values"
            android:key="themeKey"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/preferencesTheme" />
        <ListPreference
            android:defaultValue="normal"
            android:entries="@array/font_size_list"
            android:entryValues="@array/font_size_list_values"
            android:key="fontSizeKey"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/preferencesFontSize" />


    </PreferenceCategory>

</PreferenceScreen>